2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/34_if_sans_else.deca
// Description :
//     test sur while avec int   
// Resultats :
//    Erreur Contexteulle ligne 11 : le type attendu est boolean
//     Test de if sans else 
// Resultats :
//    Valide 
//
// Historique :
// cree le 01/01/2024
{
    int x ;

    if(x==1)
    {
        
    }
}