2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/14_plus_int_bool.deca
// Description :
//      opération plus entre boolean et int 
// Resultats :
//    Erreur Contexteulle : ligne 11 : l'opération + n'est pas possible entre 'int' et 'boolean'
//
// Historique :
// cree le 10/01/2024

{
    int x ;
    x = 1 + true ;
    
}